@@ -5,7 +5,8 @@ New features:
 
 Bugs fixed:
 - 1879319 (partly rolled back to fix local connect issue)
-- 1919970 Provider process not terminated after idle (w/ LocalConnect)
+- 1919970 Fixed Provider process not terminated after idle (w/ LocalConnect)
+- 1951133 Fixed httpAdapter crashes if auth library can't be loaded
 
 Changes in 1.3.0
 ================
